--- a/Assignment-1-master/Makefile
+++ b/Assignment-1-master/Makefile
@@ -1,23 +1,12 @@
 #compiler
-CC=c99
+CC=gcc
 #linker
 LD=gcc
 #include file directory
 CFLAGS=-I.
 
 #linker rule
-testSort: main.o insertionSort.o
-#	gcc -o testSort main.o insertionSort.o
-	$(LD) -o testSort main.o insertSort.o
-	
-#compiler rules
-main.o: main.c
-#gcc -c -I. main.c
-	$(CC) -c $(CFLAGS) main.c	
-	 
-insertionSort.o:
-sort1.o: 
-sort2.o: 
+testSort: hello.o
 
 #clean up procedure		
 clean:
