--- a/Assignment-1-master/Makefile
+++ b/Assignment-1-master/Makefile
@@ -1,18 +1,6 @@
- # the compiler: gcc for C program, define as g++ for C++
-  CC = gcc
+   # build an executable named myprog from myprog.c
+  all: hello.c 
+ 	  gcc -g -Wall -o hello hello.c
 
-  # compiler flags:
-  #  -g    adds debugging information to the executable file
-  #  -Wall turns on most, but not all, compiler warnings
-  CFLAGS  = -g -Wall
-
-  # the build target executable:
-  TARGET = hello
-
-  all: $(TARGET)
-
-  $(TARGET): $(TARGET).c
-  	$(CC) $(CFLAGS) -o $(TARGET) $(TARGET).c
-
-  clean:
-  	$(RM) $(TARGET)
+  clean: 
+	  $(RM) hello
